[package]
name = "alex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.17.1"
tempfile = "3.8.0"
url = "2.4.1"
